tests/ui/error-codes/E0516.rs
fn main() {
    let x: typeof(92) = 92; //~ ERROR E0516
                            //~| reserved keyword
}
